--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <main>
     <div class="card">
       <div class="cover-container">
+        <img src="/images/image-equilibrium.jpg" alt="">
         <div class="img-overlay">
           <img src="/images/icon-view.svg" alt="view">
         </div>
